# android_device_google_crosshatch

./: .clang-format  .gitigonre  Android.bp  Android.mk  AndroidProducts.mk  BoardConfig-common.mk  BoardConfig.mk  CleanSpec.mk  CommonBoardConfig.mk  METADATA  WCNSS_qcom_cfg.ini  android_filesystem_config.h  aosp_blueline.mk  aosp_blueline_hwasan.mk  aosp_crosshatch.mk  aosp_crosshatch_hwasan.mk  apns-full-conf.xml  audio_effects.xml  audio_platform_info.xml  audio_platform_info_tavil.xml  audio_platform_info_tavil_b1.xml  audio_platform_info_tavil_c1.xml  audio_platform_info_tavil_tdm.xml  audio_policy_a2dp_offload_configuration.xml  audio_policy_configuration.xml  audio_policy_configuration_a2dp_offload_disabled.xml  audio_policy_configuration_bluetooth_hal_enabled.xml  audio_policy_configuration_bluetooth_legacy_hal.xml  audio_policy_volumes.xml  audio_policy_volumes_b1.xml  audio_policy_volumes_c1.xml  bluetooth_audio_policy_configuration.xml  board-info.txt  compatibility_matrix.xml  compatibility_matrix_userdebug.xml  component-overrides.xml  config.fs  default-permissions.xml  device-blueline.mk  device-common.mk  (+97 more)
acdbdata/: adsp_avs_config.acdb
audio/: 20180301_Crosshatch_Voice_24bit.exported_tuning  20180301_Crosshatch_Voice_24bit.h  20180307_Blueline_Voice_24bit.exported_tuning  510_Crosshatch_Baseline.h  (+20 more)
wlan/common-tools/cnssdiag/: Android.mk  Makefile  Makefile.am  a_types.h  athdefs.h  athstartpack.h  cld-diag-parser.c  cld-diag-parser.h  cld-fwlog-netlink.c  dbglog.h  dbglog_common.h  dbglog_id.h  nan-parser.c  osapi_linux.h  parser.c  wlan_module_ids.h
(+699 files in other folders)
